# machine-unlearning

./: FINETUNE_TRACKER.md  README.md  UNLEARN_EVAL_TRACKER.md  env_activation.sh  pyproject.toml
configs/: default.yaml
scripts/: cleanup_checkpoints.py  evaluate_attacks.py  prepare_data.py  run_pipeline.py  run_unlearning.py  sweep_finetune.py  train_vlm.py
src/unml/: __init__.py  attacks.py  data.py  evaluate.py  model.py  tracker.py  train.py  unlearn.py  utils.py
tests/: conftest.py  test_CLIPCollator.py  test_attacks_helpers.py  test_data_splits.py  test_model_adapter.py  test_scripts_help.py  test_unlearn_helpers.py  test_utils.py
