[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unml"
version = "0.1.0"
description = "Lightweight VLM machine unlearning pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "transformers>=4.40.0,<5.0",
  "tqdm>=4.66.0",
  "numpy>=1.26.0,<2.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.4.0",
  "matplotlib>=3.8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
